--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<button id="button play-rock">Kamień</button>
+			<button id="button play-paper">Papier</button>
+			<button id="button play-scissors">Nożyce</button>
+		</div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
