--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+	<link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Signika:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container">
+		<div class="welcome">
+			<h2>Zagrajmy w kamień, papier, nożyce!</h2>
+			<p>Zasady śa proste jak budowa cepa: kamień tępi możyce, papier owija kamień a nożyce tną papier</p>
+		</div>
 		<div id="buttons">
-			<button id="button play-rock">Kamień</button>
-			<button id="button play-paper">Papier</button>
-			<button id="button play-scissors">Nożyce</button>
+			<button id="button play-rock"><i class="far fa-hand-rock"></i>Kamień</button>
+			<button id="button play-paper"><i class="far fa-hand-paper"></i>Papier</button>
+			<button id="button play-scissors"><i class="far fa-hand-scissors"></i>Nożyce</button>
 		</div>
 		<div id="messages"></div>
 	</div>
