Change welcone/btns in html Add text and btn styles

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<div class="container">
 		<div class="welcome">
 			<h2>Zagrajmy w kamień, papier, nożyce!</h2>
-			<p>Zasady śa proste jak budowa cepa: kamień tępi możyce, papier owija kamień a nożyce tną papier</p>
+			<p class="rulez">Zasady śa proste jak budowa cepa: kamień tępi możyce, papier owija kamień a nożyce tną papier</p>
+			<p class="info">Wybierz ruch aby rozpocząć grę!</p>
 		</div>
-		<div id="buttons">
-			<button id="button play-rock"><i class="far fa-hand-rock"></i>Kamień</button>
-			<button id="button play-paper"><i class="far fa-hand-paper"></i>Papier</button>
-			<button id="button play-scissors"><i class="far fa-hand-scissors"></i>Nożyce</button>
+		<div class="btns" id="buttons">
+			<button class="btn" id="button play-rock"><i class="far fa-hand-rock"></i><br>Kamień</button>
+			<button class="btn" id="button play-paper"><i class="far fa-hand-paper"></i><br>Papier</button>
+			<button class="btn" id="button play-scissors"><i class="far fa-hand-scissors"></i><br>Nożyce</button>
 		</div>
 		<div id="messages"></div>
 	</div>
