--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<div class="welcome">
 			<h2>Zagrajmy w kamień, papier, nożyce!</h2>
-			<p class="rulez">Zasady śa proste jak budowa cepa: kamień tępi możyce, papier owija kamień a nożyce tną papier</p>
+			<p class="rulez">Zasady śa proste jak budowa cepa: kamień tępi nożyce, papier owija kamień a nożyce tną papier</p>
 			<p class="info">Wybierz ruch aby rozpocząć grę!</p>
 		</div>
 		<div class="btns" id="buttons">
